<resources>
    <string name="app_name">Journal App</string>
    <string name="add_entry">Add a new entry</string>
    <string name="record_entry">Record Your Journal Entry</string>
    <string name="title_label">Title</string>
    <string name="duration_label">Duration</string>
    <string name="save_label">Save</string>
    <string name="duration_hint">minutes</string>
    <string name="info">Info</string>
    <string name="ok">OK</string>
    <string name="app_info">This app allows users to record their day to day activities. It uses the Room database and Architecture components.</string>
    <string name="date_label">Date</string>
    <string name="timestart_label">Time Start</string>
    <string name="to_label">To</string>
    <string name="timeend_label">Time End</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">This journal entry will be deleted. Press YES to confirm.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="share">Share</string>
</resources>